fix: add horizontal overflow at menu screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,6 +60,10 @@ main {
     }
 }
 
+body.mobile-menu-open {
+    overflow-x: hidden;
+}
+
 body.mobile-menu-open > main {
     width: 600px;
     border-radius: 50px;
